<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="walk_1_description">Provide expert services anytime and anywhere as per your convenience.</string>
    <string name="walk_2_description">Help make the world better with your amazing services.
</string>
    <string name="walk_3_description">Service seekers are always happy to see you assist them.
</string>
    <string name="walk_1">Service Selection</string>
    <string name="walk_2">Service Ongoing</string>
    <string name="walk_3">Rate Service</string>
    <string name="social_sign_up">Social Signup</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_code">Code</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="label_gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="hint_email_id">Email Id</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="terms_condition">I accept the following terms and conditions</string>
    <string name="already_have_account">Already have an account</string>
    <string name="do_not_have_account">Don\'t have an account</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="reset_via">Reset Via</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="hint_otp">Otp</string>
    <string name="hint_new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_account">Account</string>
    <string name="btn_doc_txt">Proceed</string>
    <string name="label_upload_img">Upload Image</string>
    <string name="label_upload_img_types">You can upload png and jpeg format.</string>
    <string name="label_upload_pdf">Upload pdf</string>
    <string name="label_upload_pdf_support">You can uplad pdf file.</string>
    <string name="label_upload_back_view_adhar">Upload back view of adhar</string>
    <string name="label_upload_front_view_adhar">Upload front view of adhar</string>
    <string name="taxi_hint_vechile_make">Vechile Make</string>
    <string name="taxi_hint_vechile_model">Vechile Model</string>
    <string name="taxi_hint_vechile_year">Vechile Year</string>
    <string name="taxi_hint_vechile_color">Vechile Color</string>
    <string name="taxi_hint_vechile_licence_number">Vechile License Plate</string>
    <string name="taxi_hint_vechile_category">Car Category</string>
    <string name="edit_image">Edit_image</string>
    <string name="foodie_vechile_number_hint">Enter Vehicle Number</string>
    <string name="services_hint_service_type">Service Type</string>
    <string name="label_pickup_location">Pickup Location</string>
    <string name="label_order_reject">Reject</string>
    <string name="label_order_aprrove">Accept</string>
    <string name="label_service_type">Service Type</string>
    <string name="label_schedule_date">Scheduled date</string>
    <string name="title_history">History</string>
    <string name="order_track">Track</string>
    <string name="order_call">Call</string>
    <string name="order_cancel">Cancel</string>
    <string name="order_past">Past</string>
    <string name="order_current">Current</string>
    <string name="history_vechile_name">%s (%s)</string>
    <string name="user_name_hint">User Name</string>
    <string name="create_account">Create Account</string>
    <string name="countrycode_hint">code</string>
    <string name="phonenumber_hint">Phone Number</string>
    <string name="email_id_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="city_hint">City</string>
    <string name="country_hint">Country</string>
    <string name="state_hint">State</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="confirm_pwd_hint">Confirm Password</string>
    <string name="hint_firstname">FirstName</string>
    <string name="hint_lastname">LastName</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search_city">Search city</string>
    <string name="gender">Gender</string>
    <string name="social_signup">Sign up via</string>
    <string name="i_accept_the_following_terms_and_conditions">I accept the following &lt;font color="#364bea"&gt;&lt;u&gt;Terms and Conditions&lt;/u&gt;&lt;/font&gt;</string>
    <string name="login_via">Login Via</string>
    <string name="dont_have_account">Don\'t have an account</string>
    <string name="social_login">Social Login</string>
    <string name="connect_via_google">Connect via Google</string>
    <string name="connect_via_facebook">Connect via Facebook</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="title_notification">Notification</string>
    <string name="notificaiton_valid_label">Valid Till</string>
    <string name="notification_label_car">Car Notification</string>
    <string name="notificaiton_label_foodie">Food Notificaiton</string>
    <string name="notification_label_service">Service Notification</string>
    <string name="title_my_account">My Account</string>
    <string-array name="title_account">
        <item>@string/title_profile</item>
        <item>@string/title_manage_services</item>
        <item>@string/title_manage_documents</item>
        <item>@string/title_bank_details</item>
        <item>@string/title_payment</item>
        <item>@string/title_wallet</item>
        <item>@string/title_earnings</item>
        <item>@string/title_invite_referrals</item>
        <item>@string/title_privacy_policy</item>
        <item>@string/title_support</item>
        <item>@string/title_language</item>
    </string-array>
    <string name="title_profile">Profile</string>
    <string name="hint_user_name">User Name</string>
    <string name="change_password">Change Password?</string>
    <string name="save">Save</string>
    <string name="title_change_password">Change Password</string>
    <string name="create_new_password">Create new password</string>
    <string name="old_password">Old Password</string>
    <string name="title_invite_referrals">Invite Referrals</string>
    <string name="your_referral_code">Your Referral Code</string>
    <string name="title_payment">Payment</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_support">Support</string>
    <string-array name="title_manage_services">
        <item>I am ready to Drive</item>
        <item>I am ready to Deliver</item>
        <item>I am ready to Serve</item>
        <item>I am ready to Post</item>
    </string-array>
    <string name="title_wallet">Wallet</string>
    <string name="title_earnings">Earnings</string>
    <string name="title_bank_details">Bank Details</string>
    <string name="title_payment_type">Payment Type</string>
    <string-array name="desc_manage_services">
        <item>Setup your Vehicle</item>
        <item>Setup your Deliveries</item>
        <item>Setup your Services</item>
        <item>Setup your Courier</item>
    </string-array>
    <string-array name="payment_mode">
        <item>Cash</item>
        <item>Card</item>
        <item>Paypal</item>
        <item>Paytm</item>
        <item>PayUMoney</item>
        <item>Braintree</item>
    </string-array>
    <string name="title_setup_vehicle">Setup Your Vehicle</string>
    <string name="title_add_vehicle">Add Vehicle</string>
    <string name="hint_car_category">Vehicle Category</string>
    <string name="hint_vehicle_model">Vehicle Model</string>
    <string name="hint_vehicle_year">Vehicle Year</string>
    <string name="hint_vehicle_color">Vehicle Color</string>
    <string name="hint_vehicle_plate">Vehicle License Plate</string>
    <string name="hint_vehicle_make">Vehicle Make</string>
    <string name="document_upload">Document Upload</string>
    <string name="rc_book">RC Book</string>
    <string name="insurance">Insurance</string>
    <string name="title_setup_services">Setup Your Vehicle</string>
    <string name="title_manage_documents">Manage Documents</string>
    <string name="front">(Front)</string>
    <string name="upload_front_page">Upload Front Page</string>
    <string name="back">(Back)</string>
    <string name="upload_back_page">Upload Back Page</string>
    <string name="expiry">Expiry</string>
    <string name="title_language">Language</string>
    <string-array name="document_list">
        <item>Taxi App</item>
        <item>Moto Rental</item>
        <item>Movers</item>
        <item>Service</item>
        <item>Food</item>
        <item>Grocery</item>
    </string-array>
    <string name="taxi_pickup_location">Pickup Location</string>
    <string name="taxi_pickup_approve">Approve</string>
    <string name="taxi_pickup_cancel">Cancel</string>
    <string name="taxi_incoming_req">Incoming Request</string>
    <string name="taxi_location">Location</string>
    <string name="taxi_service_type">Service Type</string>
    <string name="taxi_accept">Accept</string>
    <string name="taxi_rejcet">Reject</string>
    <string name="header_label_verification_img">Verification Images</string>
    <string name="header_after_document_upload">After Document Upload</string>
    <string name="header_label_document_upload">Document Upload</string>
    <string name="header_label_privacy">Privacy Policy</string>
    <string name="header_label_payment">Payment</string>
    <string name="dummy_rating">4.6</string>
    <string name="services_hint_service">Service</string>
    <string name="_50" translatable="false">$50</string>
    <string name="_100" translatable="false">$100</string>
    <string name="_1000" translatable="false">$1000</string>
    <string name="add_amount">Add amount</string>
    <string name="save_card">Save Card</string>
    <string name="card_for_receving_the_user_s_payment">Card for receiving the user\'s payment.</string>
    <string name="dummy_card_number" translatable="false">xxxx xxxx xxxx 1234</string>
    <string name="dummy_bank_name" translatable="false">HDFC</string>
    <string name="enter_amount">Enter amount</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="dummy_transaction_id">abc123asda</string>
    <string name="dummy_date">12/03/2019</string>
    <string name="dummy_amount" translatable="false">$ 15</string>
    <string name="contact_our_team_via">Contact Our Team Via</string>
    <string name="dummy_number">+91123456789</string>
    <string name="dummy_website" translatable="false">www.support.com</string>
    <string name="dummy_mail_id" translatable="false">mail@mail.com</string>
    <string name="dummy_status">Pending</string>
    <string name="taxi_app">Taxi App</string>
    <string name="food">Food</string>
    <string name="services">Service</string>
    <string name="dummy_restaturant_name">Mc donalds</string>
    <string name="dummy_restaturant_location">Los Vegas</string>
    <string name="dummy_title_text">ABC123</string>
    <string name="dummy_src_type">Sedan Type (Tn 39 aa 1234)</string>
    <string name="cancelled">Cancelled</string>
    <string name="time">3:30 pm</string>
    <string name="wallet">Wallet</string>
    <string name="transaction">Transaction</string>
</resources>