<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/transaction_id_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/dummy_transaction_id"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/transaction_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/dummy_date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/transaction_amount_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/dummy_amount"
            android:textColor="@color/home_reject" />


    </LinearLayout>
</layout>