<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:padding="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp">

            <RelativeLayout
                android:id="@+id/currentorderitem_list_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/date_time_laoyut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_corner"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp">

                    <TextView
                        android:id="@+id/date_current_list_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/date"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/time_current_list_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/time"
                        android:textColor="@color/xuber_white"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/title_current_list_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/date_time_laoyut"
                    android:layout_toRightOf="@+id/date_time_laoyut"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/dummy_title_text"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp"
                     />

                <TextView
                    android:id="@+id/ordered_item_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_current_list_tv"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/date_time_laoyut"
                    android:layout_toRightOf="@+id/date_time_laoyut"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/dummy_src_type"
                    android:textColor="@color/xuber_grey"
                    tools:text="Sedan Type" />

                <TextView
                    android:id="@+id/track_current_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ordered_item_tv"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/date_time_laoyut"
                    android:drawableStart="@drawable/ic_star"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/dummy_rating"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_11sdp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/status_past_tv"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/custom_cancelled_full_round_corner"
                    android:text="@string/cancelled"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_8sdp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>